@@ -1,3 +1,9 @@
+2005-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/Xwindow.c (XDelay): Prefer use of select() over poll()
+	since it is more portable.  MacOS-X has a poll() but it doesn't
+	work right.
+
 2005-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/magick_endian.h: Renamed from endian.h in order to avoid
